# strava_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx
strava_agent/: agent.py  mcp_server.py
strava_agent/api/: chat.py  db.py  main.py
strava_agent/mcp_server/: mcp_server.py
strava_agent/mcp_server/prompts/: system_instructions.md
